Remove usage of method deprecated in Java 9